<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:padding="20sp">


    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="150sp"
        android:background="@color/mygray">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="102dp"
            android:layout_height="127dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/kamran1"
            app:civ_border_color="#FFf"
            app:civ_border_width="3dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/darkgray"
        android:layout_height="match_parent"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clientinfofullname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/clientinfoname_string"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientinfonumber_string"
            android:id="@+id/clientinfonumbertxt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientinfolocation_string"
            android:id="@+id/clientinfolocationtxt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientinfodate_string"
            android:id="@+id/clientinfodateofdelivery" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/clientinfodesctxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientinfodesc_string"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>