<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="10sp"
    app:cardCornerRadius="5sp"
    app:cardElevation="5sp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_string"
            android:id="@+id/fullnameTxt"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description_string"
            android:id="@+id/descTxt"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location_string"
            android:id="@+id/locationTxt"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number_string"
            android:id="@+id/numberTxt"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>